--- a/djangobnb_backend/requirements.txt
+++ b/djangobnb_backend/requirements.txt
@@ -7,5 +7,6 @@ djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
 pillow==10.4.0
 python-dotenv==1.0.1
+channels==4.0.0
 gunicorn==21.2.0
 daphne==4.1.2
