--- a/djangobnb_backend/requirements.txt
+++ b/djangobnb_backend/requirements.txt
@@ -8,5 +8,7 @@ djangorestframework-simplejwt==5.3.1
 pillow==10.4.0
 python-dotenv==1.0.1
 channels==4.0.0
-gunicorn==21.2.0
 daphne==4.1.2
+celery==5.4.0
+redis==5.0.8
+django-celery-beat==2.7.0
