--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,28 @@ services:
       - ./.env.dev
     depends_on:
       - db
+      - redis
 
+  celery:
+    build: ./djangobnb_backend
+    command: celery -A djangobnb_backend worker --loglevel=info
+    volumes:
+      - ./djangobnb_backend/:/usr/src/djangobnb_backend/
+    env_file:
+      - ./.env.dev
+    depends_on:
+      - db
+      - redis
+  celery-beat:
+    build: ./djangobnb_backend
+    command: celery -A djangobnb_backend beat --loglevel=info
+    volumes:
+      - ./djangobnb_backend/:/usr/src/djangobnb_backend/
+    env_file:
+      - ./.env.dev
+    depends_on:
+      - db
+      - redis
   db:
     image: postgres:16.2
     volumes:
@@ -22,6 +43,8 @@ services:
       - POSTGRES_PASSWORD=postgrespassword
       - POSTGRES_DB=djangobnb
 
+  redis:
+    image: redis:7.0.11-alpine
+
 volumes:
   postgres_data:
-
